# function_pointers_array

./: CMakeLists.txt  README.md
include/: day.h  types.h
src/: day.cpp  main.cpp
